# context-extractor

./: .gitignore  README.md  area_definition_workflow.py  area_definition_workflow_config.py  demo.env  main.py  make_tables.py  manage.py  project_schedule_workflow.py  project_schedule_workflow_config.py  pyproject.toml  table_def.sql
context_extractor/: asgi.py  settings.py  urls.py  wsgi.py
extractor/: api.py  models.py  process_state.json  schemas.py  state.py  tasks.py  views.py
extractor/templates/extractor/: create_project.html  dashboard.html  home.html  semantic_search.html  state_running.html  state_setup.html  state_table.html
